--- a/systemaBarDjango/main/templates/cadastrarAdministrador.html
+++ b/systemaBarDjango/main/templates/cadastrarAdministrador.html
@@ -2,7 +2,7 @@
 {% block title %}<h2>Cadastrar Administrador</h2>{% endblock title %}
 {% block contentTitle %}<h3>Cadastre aqui o novo usuário administrador</h3>{% endblock contentTitle %}
 {% block content %}
-<form method="POST" action="{% url "administradorLoginEvent" %}">
+<form method="POST" action="{% url "cadastrarAdministradorEvent" %}">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Cadastrar</button>
