templates a mais foram criados e a escolha de cadastro ja foi definida, precisando agora reajustar a logica do login de acordo com o framework do django

--- a/systemaBarDjango/main/static/css/styles.css
+++ b/systemaBarDjango/main/static/css/styles.css
@@ -297,3 +297,10 @@ button:hover {
     top: -2px;
     transition: 1s;
 }
+
+
+.escolhaCadastroContainer {
+    display: flex;
+    justify-content: center;
+    gap: 13px;
+}
