--- a/systemaBarDjango/main/templates/index.html
+++ b/systemaBarDjango/main/templates/index.html
@@ -14,7 +14,7 @@
             <a href="/"><h1 class="logo">SystemaBar</h1></a>
             <nav class="nav">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="#">Cardápio</a></li>
                     <li><a href="#">Pedidos</a></li>
                     <li><a href="#">Contato</a></li>
