--- a/systemaBarDjango/main/templates/administradorDashboard.html
+++ b/systemaBarDjango/main/templates/administradorDashboard.html
@@ -7,8 +7,8 @@
     <!-- Barra Lateral -->
     <nav class="sidebar">
         <ul>
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Gerenciar Administradores</a></li>
+            <li><a href="{% url "administradorDashboard" %}">Início</a></li>
+            <li><a href="{% url "gerenciarAdministradores" %}">Gerenciar Administradores</a></li>
             <li><a href="#">Gerenciar Garçons</a></li>
             <li><a href="#">Gerenciar Cozinha</a></li>
             <li><a href="#">Gerenciar Cardápio</a></li>
