prosseguimento nas funções do dashboard do Admin

--- a/systemaBarDjango/main/templates/administradorDashboard.html
+++ b/systemaBarDjango/main/templates/administradorDashboard.html
@@ -9,8 +9,8 @@
         <ul>
             <li><a href="{% url "administradorDashboard" %}">Início</a></li>
             <li><a href="{% url "gerenciarAdministradores" %}">Gerenciar Administradores</a></li>
-            <li><a href="#">Gerenciar Garçons</a></li>
-            <li><a href="#">Gerenciar Cozinha</a></li>
+            <li><a href="{% url "gerenciarGarcom" %}">Gerenciar Garçons</a></li>
+            <li><a href="{% url "gerenciarCozinha" %}">Gerenciar Cozinha</a></li>
             <li><a href="#">Gerenciar Cardápio</a></li>
             <li><a href="#">Sair</a></li>
         </ul>
