--- a/systemaBarDjango/main/templates/gerenciarGarcom.html
+++ b/systemaBarDjango/main/templates/gerenciarGarcom.html
@@ -1,9 +1,9 @@
 {% extends "index.html" %}
 
-{% block title %}<h1>Gerenciar Administradores</h1>{% endblock title %}
+{% block title %}<h1>Gerenciar Garcons</h1>{% endblock title %}
 {% block content %}
 <div class="admin-list-container">
-    <h2>Administradores Cadastrados</h2>
+    <h2>Garcons Cadastrados</h2>
     <table class="admin-table">
         <thead>
             <tr>
@@ -13,13 +13,13 @@
             </tr>
         </thead>
         <tbody>
-            {% for admin in admins %}
+            {% for g in garcom %}
                 <tr>
-                    <td>{{ admin.usuario }}</td>
-                    <td>{{ admin.email }}</td>
+                    <td>{{ g.usuario }}</td>
+                    <td>{{ g.email }}</td>
                     <td>
-                        <a href="{% url "editarAdministrador" admin.pk %}" class="btn-edit">Editar</a>
-                        <a href="{% url "deletarAdministrador" admin.pk %}" class="btn-delete" onclick="return confirm('Tem certeza que deseja excluir este administrador?');">Excluir</a>
+                        <a href="{% url "editarGarcom" g.pk %}" class="btn-edit">Editar</a>
+                        <a href="{% url "deletarGarcom" g.pk %}" class="btn-delete" onclick="return confirm('Tem certeza que deseja excluir este administrador?');">Excluir</a>
                     </td>
                 </tr>
             {% endfor %}
