podendo adicionar itens ao cardapio, mas sem foto, funções do admin

--- a/systemaBarDjango/main/templates/administradorDashboard.html
+++ b/systemaBarDjango/main/templates/administradorDashboard.html
@@ -11,7 +11,7 @@
             <li><a href="{% url "gerenciarAdministradores" %}">Gerenciar Administradores</a></li>
             <li><a href="{% url "gerenciarGarcom" %}">Gerenciar Garçons</a></li>
             <li><a href="{% url "gerenciarCozinha" %}">Gerenciar Cozinha</a></li>
-            <li><a href="#">Gerenciar Cardápio</a></li>
+            <li><a href="{% url "gerenciarCardapio" %}">Gerenciar Cardápio</a></li>
             <li><a href="#">Sair</a></li>
         </ul>
     </nav>
