--- a/systemaBarDjango/main/static/css/styles.css
+++ b/systemaBarDjango/main/static/css/styles.css
@@ -327,3 +327,10 @@ button:hover {
 
 .btn-edit { background-color: #4CAF50; }  /* Green */
 .btn-delete { background-color: #f44336; } /* Red */
+
+.fotoProduto {
+    width: 100px;
+    height: 100px;
+    align-items: center;
+    position: relative; left: 80px;
+}
