--- a/systemaBarDjango/main/templates/editarCozinha.html
+++ b/systemaBarDjango/main/templates/editarCozinha.html
@@ -10,7 +10,7 @@
     <button type="submit">Editar</button>
 </form>
 <br>
-<a href="{% url "administradorDashboard" %}" class="btn-edit">Dashboard</a>
+<a href="{% url "administradorDashboard" %}" class="btn-primary">Dashboard</a>
 {% endblock content %}
 
 {% block contentTitle %}{% endblock contentTitle %}
