--- a/systemaBarDjango/main/templates/editarItemCardapio.html
+++ b/systemaBarDjango/main/templates/editarItemCardapio.html
@@ -1,10 +1,10 @@
 {% extends "index.html" %}
 
 
-{% block title %}<h2>Editar Administrador</h2>{% endblock title %}
+{% block title %}<h2>Editar Cardapio</h2>{% endblock title %}
 {% block content %}
-<h2>Editar Administrador</h2>
-<form method="POST">
+<h2>Editar Item</h2>
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Editar</button>
