--- a/systemaBarDjango/main/templates/gerenciarCozinha.html
+++ b/systemaBarDjango/main/templates/gerenciarCozinha.html
@@ -27,6 +27,6 @@
     </table>
 </div>
 <br><br>
-<a href="{% url "administradorDashboard" %}" class="btn-edit">Dashboard</a>
+<a href="{% url "administradorDashboard" %}" class="btn-primary">Dashboard</a>
 {% endblock content %}
 {% block contentTitle %}{% endblock contentTitle %}
