--- a/systemaBarDjango/main/templates/garcomDashboard.html
+++ b/systemaBarDjango/main/templates/garcomDashboard.html
@@ -5,7 +5,6 @@
 <div class="dashboard-container">
     <div class="sidebar">
         <ul>
-            <li><a href="#">Ver Pedidos</a></li>
             <li><a href={% url "garcomNovoPedido" %}>Novo Pedido</a></li>
             <li><a href="{% url "garcomDashboard" %}">Dashboard</a></li>        
         </ul>
@@ -24,7 +23,7 @@
             <div class="stats">
                 <div class="stat-card">
                     <h3>Pedidos Ativos</h3>
-                    <p>10</p>
+                    <p>{{ pedidos.count }}</p>
                 </div>
                 <div class="stat-card">
                     <h3>Mesas Ocupadas</h3>
@@ -54,11 +53,15 @@
                         <td>{{ pedido.id }}</td>
                         <td>{{ pedido.mesa }}</td>
                         <td>
-                            <ul>
-                                {% for item in pedido.itempedido_set.all %}
-                                    <li>{{ item.item_cardapio.nome }} - {{ item.quantidade }} x {{ item.preco }}</li>
-                                {% endfor %}
-                            </ul>
+                            {% if pedido.itens.all %}
+                                <ul>
+                                    {% for item in pedido.itens.all %}
+                                        <li>{{ item.item_cardapio.nome }} - {{ item.quantidade }} x {{ item.preco }}</li>
+                                    {% endfor %}
+                                </ul>
+                            {% else %}
+                                <p>Nenhum item adicionado</p>
+                            {% endif %}
                         </td>
                         <td>{{ pedido.get_status_display }}</td>
                         <td>
