faltando apenas as funções da cozinha

--- a/systemaBarDjango/main/templates/administradorDashboard.html
+++ b/systemaBarDjango/main/templates/administradorDashboard.html
@@ -29,15 +29,15 @@
             <div class="stats">
                 <div class="stat-card">
                     <h3>Administradores</h3>
-                    <p>5 cadastrados</p>
+                    <p>{{administradores.count}} cadastrados</p>
                 </div>
                 <div class="stat-card">
                     <h3>Garçons</h3>
-                    <p>10 cadastrados</p>
+                    <p> {{garcons.count}} cadastrados</p>
                 </div>
                 <div class="stat-card">
                     <h3>Itens do Cardápio</h3>
-                    <p>35 itens</p>
+                    <p>{{cardapio.count}} itens</p>
                 </div>
             </div>
         </section>
