--- a/systemaBarDjango/main/templates/cozinhaDashboard.html
+++ b/systemaBarDjango/main/templates/cozinhaDashboard.html
@@ -39,10 +39,11 @@
                 {% for pedido in pedidos %}
                 <tr>
                     <td>{{ pedido.garcom.usuario }}</td>
-                    <td>{{ pedido.item.nome }}</td>
+                    <td>{{ pedido.mesa }}</td>
                     <td>{{ pedido.quantidade }}</td>
-                    <td>{{ pedido.data_pedido|date:"d/m/Y H:i" }}</td>
+                    <td>{{ pedido.data_pedido|date:"H:i" }}</td>
                     <td>{{ pedido.status }}</td>
+                    <td> <a href=" {% url "cozinhaAvancarPedido" pedido.id %} "><button>Avançar</button></td></a>
                 </tr>
                 {% endfor %}
             </tbody>
