--- a/systemaBarDjango/main/templates/garcomDashboard.html
+++ b/systemaBarDjango/main/templates/garcomDashboard.html
@@ -27,11 +27,11 @@
                 </div>
                 <div class="stat-card">
                     <h3>Mesas Ocupadas</h3>
-                    <p>5</p>
+                    <p>{{ mesas_ocupadas_count }}</p>
                 </div>
                 <div class="stat-card">
                     <h3>Pedidos Concluídos</h3>
-                    <p>20</p>
+                    <p>{{ pedidosProntos }}</p>
                 </div>
             </div>
         </div>
@@ -63,9 +63,9 @@
                                 <p>Nenhum item adicionado</p>
                             {% endif %}
                         </td>
-                        <td>{{ pedido.get_status_display }}</td>
+                        <td class="{% if pedido.status == 'pronto' %}bg-green{% elif pedido.status == 'preparando' %}bg-yellow{% endif %}">{{ pedido.get_status_display }}</td>
                         <td>
-                            {% if pedido.status != 'pronto' %}
+                            {% if pedido.status != 'finalizado' %}
                                 <a href=" {% url "garcomFinalizarPedido" pedido.id %} "><button class="btn-primary">Finalizar</button></a>
                             {% else %}
                                 <button disabled>Finalizado</button>
