--- a/systemaBarDjango/main/templates/garcomDashboard.html
+++ b/systemaBarDjango/main/templates/garcomDashboard.html
@@ -7,6 +7,8 @@
         <ul>
             <li><a href={% url "garcomNovoPedido" %}>Novo Pedido</a></li>
             <li><a href="{% url "garcomDashboard" %}">Dashboard</a></li>        
+            <li><a href="{% url "garcomCardapio" %}">Ver Cardapio</a></li>
+            
         </ul>
     </div>
 
